soap-attachments/2.0/_index.md
---
title: "Jakarta SOAP with Attachments 2.0"
date: 2020-09-16
summary: "Release for Jakarta EE 9"
---
Jakarta SOAP with Attachments defines an API enabling developers to produce
and consume messages conforming to the SOAP 1.1, SOAP 1.2, and SOAP Attachments Feature.

* [Jakarta SOAP Attachments 2.0 Release Record](https://projects.eclipse.org/projects/ee4j.jaxws/releases/2.0-jakarta-soap-attachments)
  * [Jakarta EE Platform 9 Release Plan](https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9ReleasePlan)
* [Jakarta SOAP Attachments 2.0 Specification Document](./jakarta-soap-spec-2.0.pdf) (PDF)
* [Jakarta SOAP Attachments 2.0 Specification Document](./jakarta-soap-spec-2.0.html) (HTML)
* [Jakarta SOAP Attachments 2.0 Javadoc](./apidocs)
* [Jakarta SOAP Attachments 2.0 TCK](https://download.eclipse.org/jakartaee/soap-attachments/2.0/jakarta-soap-tck-2.0.0.zip)  ([sig](https://download.eclipse.org/jakartaee/soap-attachments/2.0/jakarta-soap-tck-2.0.0.zip.sig),  [sha](https://download.eclipse.org/jakartaee/soap-attachments/2.0/jakarta-soap-tck-2.0.0.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
   * Adds JDK 11 support [Jakarta SOAP Attachments 2.0.1 TCK](https://download.eclipse.org/jakartaee/soap-attachments/2.0/jakarta-soap-tck-2.0.1.zip)  ([sig](https://download.eclipse.org/jakartaee/soap-attachments/2.0/jakarta-soap-tck-2.0.1.zip.sig),  [sha](https://download.eclipse.org/jakartaee/soap-attachments/2.0/jakarta-soap-tck-2.0.1.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
* Maven coordinates
  * [jakarta.xml.soap:jakarta.xml.soap-api:jar:2.0.1](https://search.maven.org/artifact/jakarta.xml.soap/jakarta.xml.soap-api/2.0.1/jar)


# Compatible Implementations

* [Eclipse Implementation of Jakarta SOAP with Attachments 2.0.0](https://eclipse-ee4j.github.io/metro-saaj/)
* [Eclipse Metro 3.0.0](https://eclipse-ee4j.github.io/metro-wsit/)

# Ballots

## Plan Review

[//]: # (For Jakarta EE 9, the Platform Plan Review covered 95% of the Specification Projects.  For those Projects, just use the following statement in this Plan Review section:)

This Specification Project's Plan Review was covered by the [Jakarta EE 9 Plan Review](https://jakarta.ee/specifications/platform/9/).  
Please reference that ballot for the official results.

[//]: # (If your Project was required to do a standalone Plan Review...  You'll need to perform an official Plan Review ballot and record the results here.)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-09-16 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura                                 | Fujitsu             |  +1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |  +1  |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |  +1  |
| Andrew Pielage, Matt Gill                      | Payara              |  +1  |
| Scott Stark, Mark Little                       | Red Hat             |  +1  |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |  +1  |
| Ivar Grimstad                                  | EE4J PMC            |  +1  |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members |  +1  |
| Werner Keil                                    | Committer Members   |  +1  |
| Scott (Congquan) Wang                          | Enterprise Members  |  +1  |
|                                                | Total               |  10  |

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg00813.html)
